2009-09-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid sleeping for one second most of the time in sanity check.
	* m4/sanity.m4 (AM_SANITY_CHECK): Try sanity check first without
	sleeping for a second, and only if that failed, sleep and try
	again, to avoid the delay in the common case of a configure
	script that is older than a second, or a system with sub-second
	time stamp granularity.
	Report and different patch by Jim Meyering.

2009-09-06  Stefano Lattarini  <stefano.lattarini@gmail.com>  (tiny change)

	tests/README: warn about zsh incompatibilities.
	* tests/README (User interface, Getting details from failures):
	Explicitly state that every test is a "shell script", not just
	a "script", and that it's run by `/bin/sh' by default.
	* tests/README (User interface, Supported shells): New subsection,
	telling about expected portability of the automake test scripts,
	describing a zsh incompatibility (w.r.t. $0), and a workaround to
	it (with the `--no-function-argzero' option).

	testsuite: fix a minor glitch.
	* tests/defs.in (exit trap): Use `$me', not `$as_me', as the
	name of the current test (used in error messages).
	* THANKS: Update.

2009-07-08  Jim Meyering  <meyering@redhat.com>

	manual: fix a trivial grammar error.
	* doc/automake.texi (Invoking aclocal): Fix grammar.

2009-06-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	AM_PROG_GCJ: use AC_CHECK_TOOLS for gcj, for cross compilation.
	* m4/gcj.m4 (AM_PROG_GCJ): Use AC_CHECK_TOOLS, rather than
	AC_CHECK_PROGS, when searching for `gcj'.
	* NEWS: Update.
	Report by Jack Kelly.

2009-05-24  Jack Kelly  <endgame.dos@gmail.com>  (tiny change)
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	AM_PROG_GCJ currently fails to define OBJEXT and EXEEXT.
	* tests/gcj6.test: New test.
	* tests/Makefile.am: Update; mark gcj6.test as XFAIL.
	* THANKS: Update.

2009-05-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	parallel-tests: avoid GNU make 3.80 substitution bug.