@@ -1,3 +1,13 @@
+2009-12-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Revert "Avoid sleeping for one second most of the time in sanity check."
+	Not sleeping in the configure sanity check breaks several tests
+	on systems that provide sub-second time stamps, when only some
+	of the tools support them, some truncate them, and other round
+	them.
+	* m4/sanity.m4 (AM_SANITY_CHECK): Do sleep for a second.
+	Report by Peter Breitenlohner and others.
+
 2009-09-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Avoid sleeping for one second most of the time in sanity check.
